# RSLogger_video

RSLogger_vibe/: README.md  __init__.py  main.py  pyproject.toml
RSLogger_vibe/rslogger_vibe.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
RSLogger_vibe/sensors/: __init__.py
RSLogger_vibe/sensors/audio/: CLAUDE.md  README.md  kill_all_audio.sh  main.py  pyproject.toml  pytest.ini  rslogger.service  run_audio_system.sh  test_long_recording.py  test_recording.html  test_recording_simple.py
RSLogger_vibe/sensors/audio/recordings/: recording_20250523_161801_default.json  recording_20250523_161810_default.json  recording_20250523_183934_default.json  recording_20250523_191746_studio_mic.json
RSLogger_vibe/sensors/audio/src/: auth.py  cli.py  config.py  devices.py  enums.py  exceptions.py  modes.py  recorder.py  system_monitor.py  websocket_client.py
RSLogger_vibe/sensors/audio/src/rslogger_microphone.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
RSLogger_vibe/sensors/audio/test_recordings/: long_test_recording.json
RSLogger_vibe/sensors/audio/tests/: conftest.py  test_cli.py  test_config.py  test_recorder.py
RSLogger_vibe/sensors/video/: output.avi  pyproject.toml
RSLogger_vibe/ui/: README.md  __init__.py  mqtt_ui_server.py  rslogger_integration.py  ws_ui_server.py
RSLogger_vibe/ui/static/: app.js  index.html  styles.css
RSLogger_video/: main.py
